--- a/deployment/python/requirements.txt
+++ b/deployment/python/requirements.txt
@@ -1,9 +1,9 @@
 beautifulsoup4==4.13.4
-pandas==2.2.3
-pyarrow==19.0.1
+pandas
+pyarrow
+webdriver-manager==4.0.2
 selenium==4.31.0
 retrying==1.3.4
-pyspark==3.4.1
-delta-spark==2.4.0
+pyspark==3.5.5
+delta-spark==3.3.0
 deltalake==0.25.5
-pytest==8.3.5
