--- a/deployment/airflow/Dockerfile
+++ b/deployment/airflow/Dockerfile
@@ -5,4 +5,4 @@ FROM apache/airflow:2.10.5
 WORKDIR /opt/airflow
 
 # Install additional dependencies if needed
-RUN pip install --no-cache-dir apache-airflow-providers-postgres 
+RUN pip install --no-cache-dir apache-airflow-providers-postgres apache-airflow-providers-ssh
