--- a/deployment/python/Dockerfile
+++ b/deployment/python/Dockerfile
@@ -9,7 +9,7 @@ USER root
 
 # Install OpenSSH server
 RUN apt-get update && \
-    apt-get install -y openssh-server && \
+    apt-get install -y openssh-server unzip && \
     mkdir /var/run/sshd
 
 # Generate SSH host keys
@@ -55,5 +55,8 @@ WORKDIR /app/scrape_sentiments
 
 USER root
 
+RUN echo "Match User spark" >> /etc/ssh/sshd_config && \
+    echo "  ForceCommand /bin/bash -l" >> /etc/ssh/sshd_config
+    
 # Start SSH service
 CMD ["/usr/sbin/sshd", "-D"]
