--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,21 +25,7 @@ services:
         aliases:
           - spark_container
     depends_on:
-      - git-sync
       - firefox
-
-  git-sync:
-    image: k8s.gcr.io/git-sync/git-sync:v3.6.6
-    volumes:
-      - ./run/:/git
-    environment:
-      - GIT_SYNC_REPO=https://github.com/shubhampateliitm/doing-it.git
-      - GIT_SYNC_BRANCH=main
-      - GIT_SYNC_ROOT=/git
-      - GIT_SYNC_WAIT=30
-      - GIT_SYNC_ONE_TIME=false
-    networks:
-      - scrape_network
 
   postgres:
     image: postgres:15
@@ -63,7 +49,7 @@ services:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
     volumes:
-      - ./run/doing-it.git/code/airflow/dags:/opt/airflow/dags
+      - ./code/airflow/dags:/opt/airflow/dags
       - ./run/airflow:/opt/airflow
       - ./airflow/.ssh:/home/airflow/.ssh:ro
     depends_on:
@@ -81,12 +67,11 @@ services:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
     volumes:
-      - ./run/doing-it.git/code/airflow/dags:/opt/airflow/dags
+      - ./code/airflow/dags:/opt/airflow/dags
       - ./run/airflow:/opt/airflow
       - ./airflow/.ssh:/home/airflow/.ssh:ro
     depends_on:
       - postgres
-      - git-sync
     command: airflow scheduler
     networks:
       - scrape_network
